# better-keynote-export

./: .gitignore  LICENSE.md  README.md  export-speaker-notes.applescript  export.py  fix-slides.py  notereader.py  pypi-readme.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
keynote_export/: __init__.py  export.py
keynote_export/resources/: site.jinja
resources/: presentation.css  share.jinja  site.jinja
sample/: notes.txt
sample/scalding-at-etsy-v2.key/Data/: droppedImage-1519.tiff  droppedImage-192.tiff  droppedImage-244.tiff  droppedImage-245.tiff  droppedImage-264.tiff  droppedImage-756.tiff  droppedImage-771.tiff  pasted-image-1284.tif  pasted-image-1376.tif  pasted-image-1559.tif  pasted-image-1562.tif  pasted-image-1725.tif  pasted-image-190.tif  pasted-image-764.tif
sample/scalding-at-etsy-v2.key/Metadata/: BuildVersionHistory.plist  DocumentIdentifier  Properties.plist
