[tool.poetry]
name = "better-keynote-export"
version = "0.1.0"
description = ""
authors = ["Dan McKinley <mcfunley@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
