[tool.poetry]
name = "keynote_export"
version = "0.1.1"
description = ""
authors = ["Dan McKinley <mcfunley@gmail.com>"]
repository = "https://github.com/mcfunley/better-keynote-export"
readme = "README.md"

[tool.poetry.scripts]
keynote-export = "keynote_export:main"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
appscript = "^1.3.0"
reportlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
