[tool.poetry]
name = "keynote_export"
version = "0.1.5"
description = ""
authors = ["Dan McKinley <mcfunley@gmail.com>"]
repository = "https://github.com/mcfunley/better-keynote-export"
readme = "pypi-readme.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Office/Business",
    "Topic :: Utilities"
]

[tool.poetry.scripts]
keynote-export = "keynote_export:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
keynote_export = ["resources/*"]

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
appscript = "^1.3.0"
reportlab = "^4.2.5"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
